老师页卡样式

--- a/source/widget/Public.Module/teacher-bomb.html
+++ b/source/widget/Public.Module/teacher-bomb.html
@@ -8,14 +8,14 @@
     <meta name="description" content="">
     <meta name="keywords" content="">
     <!-- 这是CSS库文件 -->
-    <link rel="stylesheet" type="text/css" href="../../lib/bootstrap/3.3.5-custom/css/bootstrap.min.css">
+    <link href="../../lib/bootstrap/3.3.5-custom/css/bootstrap.min.css" rel="stylesheet">
     <!-- 这是当前模块样式文件 -->
     <link href="courses.css" rel="stylesheet"></head>
-    <body>
-        <div class="teacher-bomb course-list">
+       <body>
+        <div class="teacher-bomb">
             <div class="dialog-second">
                 <dl class="dialog-top">
-                    <dt><img src="http://s04.xesimg.com/teacher/2013/08/26/13774954081178.jpg"></dt>
+                    <dt><img src="img/default_photo.jpg"></dt>
                     <dd>
                         <a href="javascript:;">独孤九剑</a><i class="course-icon gender-g"></i>
                         <!-- <em class="course-icon icon-s-bverify" title="学而思网校机构认证">v</em> -->
@@ -57,10 +57,10 @@
                 </div>
             </div>
         </div>
-        <div class="teacher-bomb course-list">
+        <div class="teacher-bomb">
             <div class="dialog-second">
                 <dl class="dialog-top">
-                    <dt><img src="http://s04.xesimg.com/teacher/2013/08/26/13774954081178.jpg"></dt>
+                    <dt><img src="img/default_photo.jpg"></dt>
                     <dd>
                         <a href="javascript:;">独孤九剑</a><em class="course-icon icon-s-bverify" title="学而思网校机构认证">v</em><i class="course-icon gender-b"></i>
                     </dd>
@@ -81,18 +81,18 @@
                 </div>
             </div>
             <div class="btns-L">
-                <div class="for-center">
-                    <span data-type="3" data-params="urlStr=840&amp;urlKey=af0030c654f79b371438ebdf40d4bead" data-value="840" data-url="/teachers/follow/" class="fresh-course-attention">
-                        <a href="javascript:void(0)" class="fresh-attention-btn fresh-add-attention-btn"><span class="fresh-add left">+</span><span class="left">关注</span></a>
-                    </span>
+                <div class="for-center ">
+                    <div class="ui_follow" data-type="2" data-state="1" data-params="urlStr=840&amp;urlKey=af0030c654f79b371438ebdf40d4bead" data-url="/teachers/follow/" data-value="840">
+                        <a href="###" class="btn btn-warning follow_add btn-sm">+关注</a>
+                    </div>
                     <a href="javascript:;" class="look-btn">去看看</a>
                 </div>
             </div>
         </div>
-        <div class="teacher-bomb course-list">
+        <div class="teacher-bomb">
             <div class="dialog-second">
                 <dl class="dialog-top">
-                    <dt><img src="http://s04.xesimg.com/teacher/2013/08/26/13774954081178.jpg"></dt>
+                    <dt><img src="img/default_photo.jpg"></dt>
                     <dd><a href="javascript:;">独孤九剑</a><em class="course-icon icon-s-yverify" title="学而思网校机构认证">v</em><img src="img/icon-praise.png">
                     </dd>
                 </dl>
@@ -115,17 +115,17 @@
             </div>
             <div class="btns-L">
                 <div class="for-center">
-                    <span data-type="3" data-params="urlStr=840&amp;urlKey=af0030c654f79b371438ebdf40d4bead" data-value="840" data-url="/teachers/follow/" class="fresh-course-attention">
-                        <a href="javascript:void(0)" class="fresh-attention-btn fresh-add-attention-btn"><span class="fresh-add left">+</span><span class="left">关注</span></a>
-                    </span>
+                    <div class="ui_follow" data-type="2" data-state="1" data-params="urlStr=840&amp;urlKey=af0030c654f79b371438ebdf40d4bead" data-url="/teachers/follow/" data-value="840">
+                        <a href="###" class="btn btn-warning follow_add btn-sm">+关注</a>
+                    </div>
                     <a href="javascript:;" class="look-btn">去看看</a>
                 </div>
             </div>
         </div>
-        <div class="teacher-bomb course-list">
+        <div class="teacher-bomb">
             <div class="dialog-second">
                 <dl class="dialog-top">
-                    <dt><img src="http://s04.xesimg.com/teacher/2013/08/26/13774954081178.jpg"></dt>
+                    <dt><img src="img/default_photo.jpg"></dt>
                     <dd>
                         <a href="javascript:;">独孤九剑</a><em class="course-icon icon-s-redverify" title="学而思网校机构认证">v</em><i class="course-icon gender-g"></i>
                         
@@ -170,9 +170,9 @@
             </div>
             <div class="btns-L">
                 <div class="for-center">
-                    <span data-type="3" data-params="urlStr=840&amp;urlKey=af0030c654f79b371438ebdf40d4bead" data-value="840" data-url="/teachers/follow/" class="fresh-course-attention">
-                        <a href="javascript:void(0)" class="fresh-attention-btn fresh-add-attention-btn"><span class="fresh-add left">+</span><span class="left">关注</span></a>
-                    </span>
+                    <div class="ui_follow" data-type="2" data-state="1" data-params="urlStr=840&amp;urlKey=af0030c654f79b371438ebdf40d4bead" data-url="/teachers/follow/" data-value="840">
+                        <a href="###" class="btn btn-warning follow_add btn-sm">+关注</a>
+                    </div>
                     <a href="javascript:;" class="look-btn">去看看</a>
                 </div>
             </div>
