完善信息更改

--- a/source/widget/UserHome.perfection/welcomeForm.html
+++ b/source/widget/UserHome.perfection/welcomeForm.html
@@ -41,6 +41,10 @@
 					<p class="area-tips"><span class="errTips" id="14"></span></p>
 
 				</div>
+
+			<div class="info-error-msg error-msg-bg">
+				111111
+			</div>
 			</div>
 			<div class="infor-btn-wrap">
 				<button type="submit" name="submit" class="alert information-btn" id="inforSubmit">下一步</button>
