完善信息姓名限制+学习中心样式更改

--- a/source/widget/UserHome.perfection/perfect-information.html
+++ b/source/widget/UserHome.perfection/perfect-information.html
@@ -21,6 +21,7 @@
 	<!-- 这是当前模块js文件 -->
 	<script src="../../lib/bootstrap/3.3.5-custom/js/bootstrap.min.js"></script>
 	<script type="text/javascript" src="../Module.Modal/Modal.js"></script>	
+	<link href="perfect-information.js" rel="stylesheet"></head>
 	<script type="text/javascript">
 // 欢迎信息
 function welcomeFormList(){
