学习中心首页更改

--- a/source/data/courses/material.html
+++ b/source/data/courses/material.html
@@ -26,6 +26,7 @@
                         <p>第1讲：加减法巧算（一）（暑期课程）</p>
                         <a href="##" class="load-btn btn-success btn">下载讲义</a>
                         <a href="##" class="load-btn btn-success btn">下载测试题</a>
+                        <a href="##" class="load-btn btn-success btn">下载课后练习</a>
                     </td>
                     <td>
                         <p>第1讲：加减法巧算（一）（暑期课程）</p>
