--- a/source/widget/UserHome.perfection/showFollowList.html
+++ b/source/widget/UserHome.perfection/showFollowList.html
@@ -1,109 +1,109 @@
 <div class="focus-teacher">
-			<ul class="infor-title">
-				<li>1.完善信息</li>
-				<li>2.关注老师</li>
-			</ul>
-			<div class="setting-infor-inner">
-				<p class="setting-tip"><span>关注老师</span>    新鲜事中获知老师分享的试题、消息</p>
-				<div class="fun-follow-item">
-					<div class="follow-list">
-						<div class="ui-avatar">
-							<img src="http://img04.xesimg.com/avatar/user_0.png">
-						</div>
-						<div class="follow-con-fun">
-							<p class="fun-username">
-								<a class="ui-username" href="http://www.xueersi.com/s/30094">客服测试</a>
-								<em title="学而思网校官方账号" class="course-icon icon-bverify">v</em>		
-							</p>
-							<p title="" class="fun-usres">官方账号</p>
+	<ul class="infor-title">
+		<li>1.完善信息</li>
+		<li>2.关注老师</li>
+	</ul>
+	<div class="setting-infor-inner">
+		<p class="setting-tip"><span>关注老师</span>    新鲜事中获知老师分享的试题、消息</p>
+		<div class="fun-follow-item">
+			<div class="follow-list">
+				<div class="ui-avatar">
+					<img src="http://img04.xesimg.com/avatar/user_0.png">
+				</div>
+				<div class="follow-con-fun">
+					<p class="fun-username">
+						<a class="ui-username" href="http://www.xueersi.com/s/30094">客服测试</a>
+						<em title="学而思网校官方账号" class="course-icon icon-bverify">v</em>		
+					</p>
+					<p title="" class="fun-usres">官方账号</p>
 
-							<div class="fresh-course-attention" data-url="/teachers/follow/" data-value="840" data-params="urlStr=840&urlKey=af0030c654f79b371438ebdf40d4bead" data-type="3">
-								<a class="fresh-attention-btn fresh-add-attention-btn" href="javascript:void(0)"><span class="fresh-add left">+</span><span class="left">关注</span></a>
-							</div>
-						</div>
-						<div title="测试" class="follow-con-info">学而思初中数学教研主任 中考专...</div>
-					</div>
-					<div class="follow-list">
-						<div class="ui-avatar">
-							<img src="http://img04.xesimg.com/avatar/user_0.png">
-						</div>
-						<div class="follow-con-fun">
-							<p class="fun-username">
-								<a class="ui-username" href="http://www.xueersi.com/s/30094">客服测试</a>
-								<em title="学而思网校官方账号" class="course-icon icon-bverify">v</em>		
-							</p>
-							<p title="" class="fun-usres">官方账号</p>
-
-							<div class="fresh-course-attention" data-url="/teachers/follow/" data-value="840" data-params="urlStr=840&urlKey=af0030c654f79b371438ebdf40d4bead" data-type="3">
-								<em>已关注</em>
-							</div>
-						</div>
-						<div title="测试" class="follow-con-info">学而思初中数学教研主任 中考专...</div>
-					</div>
-					<div class="follow-list">
-						<div class="ui-avatar">
-							<img src="http://img04.xesimg.com/avatar/user_0.png">
-						</div>
-						<div class="follow-con-fun">
-							<p class="fun-username">
-								<a class="ui-username" href="http://www.xueersi.com/s/30094">客服测试</a>
-								<em title="学而思网校官方账号" class="course-icon icon-yverify">v</em>		
-							</p>
-							<p title="" class="fun-usres">官方账号</p>
-
-							<div data-type="2" data-params="urlStr=840&amp;urlKey=af0030c654f79b371438ebdf40d4bead" data-value="840" data-url="/teachers/follow/" class="fresh-course-attention"><em>已关注</em><a class="fresh-add-cancel-btn" href="javascript:void(0)">取消</a></div>
-						</div>
-						<div title="测试" class="follow-con-info">学而思初中数学教研主任 中考专...</div>
-					</div>
-					<div class="follow-list">
-						<div class="ui-avatar">
-							<img src="http://img04.xesimg.com/avatar/user_0.png">
-						</div>
-						<div class="follow-con-fun">
-							<p class="fun-username">
-								<a class="ui-username" href="http://www.xueersi.com/s/30094">客服测试</a>
-								<em title="学而思网校官方账号" class="course-icon icon-yverify">v</em>		
-							</p>
-							<p title="" class="fun-usres">官方账号</p>
-
-							<div data-type="2" data-params="urlStr=840&amp;urlKey=af0030c654f79b371438ebdf40d4bead" data-value="840" data-url="/teachers/follow/" class="fresh-course-attention"><em>已关注</em><a class="fresh-add-cancel-btn" href="javascript:void(0)">取消</a></div>
-						</div>
-						<div title="测试" class="follow-con-info">学而思初中数学教研主任 中考专...</div>
-					</div>
-					<div class="follow-list">
-						<div class="ui-avatar">
-							<img src="http://img04.xesimg.com/avatar/user_0.png">
-						</div>
-						<div class="follow-con-fun">
-							<p class="fun-username">
-								<a class="ui-username" href="http://www.xueersi.com/s/30094">客服测试</a>
-								<em title="学而思网校官方账号" class="course-icon icon-yverify">v</em>		
-							</p>
-							<p title="" class="fun-usres">官方账号</p>
-
-							<div data-type="2" data-params="urlStr=840&amp;urlKey=af0030c654f79b371438ebdf40d4bead" data-value="840" data-url="/teachers/follow/" class="fresh-course-attention"><em>已关注</em><a class="fresh-add-cancel-btn" href="javascript:void(0)">取消</a></div>
-						</div>
-						<div title="测试" class="follow-con-info">学而思初中数学教研主任 中考专...</div>
-					</div>
-					<div class="follow-list">
-						<div class="ui-avatar">
-							<img src="http://img04.xesimg.com/avatar/user_0.png">
-						</div>
-						<div class="follow-con-fun">
-							<p class="fun-username">
-								<a class="ui-username" href="http://www.xueersi.com/s/30094">客服测试</a>
-								<em title="学而思网校官方账号" class="course-icon icon-yverify">v</em>		
-							</p>
-							<p title="" class="fun-usres">官方账号</p>
-
-							<div data-type="2" data-params="urlStr=840&amp;urlKey=af0030c654f79b371438ebdf40d4bead" data-value="840" data-url="/teachers/follow/" class="fresh-course-attention"><em>已关注</em><a class="fresh-add-cancel-btn" href="javascript:void(0)">取消</a></div>
-						</div>
-						<div title="测试" class="follow-con-info">学而思初中数学教研主任 中考专...</div>
+					<div class="fresh-course-attention" data-url="/teachers/follow/" data-value="840" data-params="urlStr=840&urlKey=af0030c654f79b371438ebdf40d4bead" data-type="3">
+						<a class="fresh-attention-btn fresh-add-attention-btn" href="javascript:void(0)"><span class="fresh-add left">+</span><span class="left">关注</span></a>
 					</div>
 				</div>
+				<div title="测试" class="follow-con-info">学而思初中数学教研主任 中考专...</div>
 			</div>
-			<div class="infor-btn-wrap">
-				<button type="submit" name="submit" class="alert information-btn" id="">关注，进入我的网校</button>
+			<div class="follow-list">
+				<div class="ui-avatar">
+					<img src="http://img04.xesimg.com/avatar/user_0.png">
+				</div>
+				<div class="follow-con-fun">
+					<p class="fun-username">
+						<a class="ui-username" href="http://www.xueersi.com/s/30094">客服测试</a>
+						<em title="学而思网校官方账号" class="course-icon icon-bverify">v</em>		
+					</p>
+					<p title="" class="fun-usres">官方账号</p>
+
+					<div class="ui_follow" data-type="2" data-state="1" data-params="urlStr=840&amp;urlKey=af0030c654f79b371438ebdf40d4bead" data-url="/teachers/follow/" data-value="840">
+						<span class="btn-sm btn-default">已关注</span>  <a href="###" class="btn-sm btn-link follow_cancel">取消</a>
+					</div>
+				</div>
+				<div title="测试" class="follow-con-info">学而思初中数学教研主任 中考专...</div>
+			</div>
+			<div class="follow-list">
+				<div class="ui-avatar">
+					<img src="http://img04.xesimg.com/avatar/user_0.png">
+				</div>
+				<div class="follow-con-fun">
+					<p class="fun-username">
+						<a class="ui-username" href="http://www.xueersi.com/s/30094">客服测试</a>
+						<em title="学而思网校官方账号" class="course-icon icon-yverify">v</em>		
+					</p>
+					<p title="" class="fun-usres">官方账号</p>
+
+					<div data-type="2" data-params="urlStr=840&amp;urlKey=af0030c654f79b371438ebdf40d4bead" data-value="840" data-url="/teachers/follow/" class="fresh-course-attention"><em>已关注</em><a class="fresh-add-cancel-btn" href="javascript:void(0)">取消</a></div>
+				</div>
+				<div title="测试" class="follow-con-info">学而思初中数学教研主任 中考专...</div>
+			</div>
+			<div class="follow-list">
+				<div class="ui-avatar">
+					<img src="http://img04.xesimg.com/avatar/user_0.png">
+				</div>
+				<div class="follow-con-fun">
+					<p class="fun-username">
+						<a class="ui-username" href="http://www.xueersi.com/s/30094">客服测试</a>
+						<em title="学而思网校官方账号" class="course-icon icon-yverify">v</em>		
+					</p>
+					<p title="" class="fun-usres">官方账号</p>
+
+					<div data-type="2" data-params="urlStr=840&amp;urlKey=af0030c654f79b371438ebdf40d4bead" data-value="840" data-url="/teachers/follow/" class="fresh-course-attention"><em>已关注</em><a class="fresh-add-cancel-btn" href="javascript:void(0)">取消</a></div>
+				</div>
+				<div title="测试" class="follow-con-info">学而思初中数学教研主任 中考专...</div>
+			</div>
+			<div class="follow-list">
+				<div class="ui-avatar">
+					<img src="http://img04.xesimg.com/avatar/user_0.png">
+				</div>
+				<div class="follow-con-fun">
+					<p class="fun-username">
+						<a class="ui-username" href="http://www.xueersi.com/s/30094">客服测试</a>
+						<em title="学而思网校官方账号" class="course-icon icon-yverify">v</em>		
+					</p>
+					<p title="" class="fun-usres">官方账号</p>
+
+					<div data-type="2" data-params="urlStr=840&amp;urlKey=af0030c654f79b371438ebdf40d4bead" data-value="840" data-url="/teachers/follow/" class="fresh-course-attention"><em>已关注</em><a class="fresh-add-cancel-btn" href="javascript:void(0)">取消</a></div>
+				</div>
+				<div title="测试" class="follow-con-info">学而思初中数学教研主任 中考专...</div>
+			</div>
+			<div class="follow-list">
+				<div class="ui-avatar">
+					<img src="http://img04.xesimg.com/avatar/user_0.png">
+				</div>
+				<div class="follow-con-fun">
+					<p class="fun-username">
+						<a class="ui-username" href="http://www.xueersi.com/s/30094">客服测试</a>
+						<em title="学而思网校官方账号" class="course-icon icon-yverify">v</em>		
+					</p>
+					<p title="" class="fun-usres">官方账号</p>
+
+					<div data-type="2" data-params="urlStr=840&amp;urlKey=af0030c654f79b371438ebdf40d4bead" data-value="840" data-url="/teachers/follow/" class="fresh-course-attention"><em>已关注</em><a class="fresh-add-cancel-btn" href="javascript:void(0)">取消</a></div>
+				</div>
+				<div title="测试" class="follow-con-info">学而思初中数学教研主任 中考专...</div>
 			</div>
 		</div>
-		<script type="text/javascript" src="perfect-information.js"></script>
+	</div>
+	<div class="infor-btn-wrap">
+		<button type="submit" name="submit" class="alert information-btn" id="">关注，进入我的网校</button>
+	</div>
+</div>
+<script type="text/javascript" src="perfect-information.js"></script>
