--- a/source/widget/Public.Module/teacher-bomb.html
+++ b/source/widget/Public.Module/teacher-bomb.html
@@ -9,6 +9,7 @@
     <meta name="keywords" content="">
     <!-- 这是CSS库文件 -->
     <link href="../../lib/bootstrap/3.3.5-custom/css/bootstrap.min.css" rel="stylesheet">
+    <link href="" rel="stylesheet">
     <!-- 这是当前模块样式文件 -->
     <link href="courses.css" rel="stylesheet"></head>
        <body>
@@ -71,7 +72,7 @@
             </div>
 
             <div class="dialog-down-wrap">
-                <div class="dialog-border">
+                <div class="">
                     <div class="dialog-down">
                         <ul>
                             <li>粉丝<span>1万</span><i>|</i></li>
@@ -103,7 +104,7 @@
             </div>
 
             <div class="dialog-down-wrap">
-                <div class="dialog-border">
+                <div class="">
                     <div class="dialog-down">
                         <ul>
                             <li>粉丝<span>1万</span><i>|</i></li>
@@ -157,7 +158,7 @@
             </div>
 
             <div class="dialog-down-wrap">
-                <div class="dialog-border">
+                <div class="">
                     <div class="dialog-down">
                         <ul>
                             <li>以消耗金币<span>12</span><i>|</i></li>
