--- a/source/widget/UserHome.perfection/perfect-information.html
+++ b/source/widget/UserHome.perfection/perfect-information.html
@@ -15,9 +15,9 @@
 	<script type="text/javascript" src="../../lib/jQuery/2.1.1/jquery.min.js"></script>
 </head>
 <body>
-	<div id="welcome-infor" data-toggle="modal" data-target="#informationGuid"></div>
+	<!-- <div id="welcome-infor" data-toggle="modal" data-target="#informationGuid"></div>
 	<div id="welcome-form" data-toggle="modal" data-target="#welcomeFormList"></div>
-	<div id="FollowList" data-toggle="modal" data-target="#showFollowList"></div>
+	<div id="FollowList" data-toggle="modal" data-target="#showFollowList"></div> -->
 	<!-- 这是当前模块js文件 -->
 	<script src="../../lib/bootstrap/3.3.5-custom/js/bootstrap.min.js"></script>
 	<script type="text/javascript" src="../Module.Modal/Modal.js"></script>	
