--- a/source/data/courses/continuecourse.html
+++ b/source/data/courses/continuecourse.html
@@ -19,7 +19,7 @@
  			<p class="continue-course-detail">课程日期：<span class="continue-course-detail-date">2015-03-01至2015-8-31</span><span class="continue-course-detail-date">一轮上午班</span></p>
  		</div>
  		<div class="course-num">
- 				<a class="btn btn-default" href="http://www.xueersi.com/kc/31061.html"><em class="button-icon icon-record"></em>立即报名</a>
+ 				<a class="btn btn-default" href="http://www.xueersi.com/kc/31061.html">立即报名</a>
  		</div>
  	</div>
  </div>
@@ -44,7 +44,7 @@
  			<p class="continue-course-detail">课程日期：<span class="continue-course-detail-date">2015-03-01至2015-8-31</span><span class="continue-course-detail-date">一轮上午班</span></p>
  		</div>
  		<div class="course-num">
- 				<a class="btn btn-default" href="http://www.xueersi.com/kc/31061.html"><em class="button-icon icon-record"></em>立即报名</a>
+ 				<a class="btn btn-default" href="http://www.xueersi.com/kc/31061.html">立即报名</a>
  		</div>
  	</div>
  </div>
@@ -69,7 +69,7 @@
  			<p class="continue-course-detail">课程日期：<span class="continue-course-detail-date">2015-03-01至2015-8-31</span><span class="continue-course-detail-date">一轮上午班</span></p>
  		</div>
  		<div class="course-num">
- 				<a class="btn btn-default" href="http://www.xueersi.com/kc/31061.html"><em class="button-icon icon-record"></em>立即报名</a>
+ 				<a class="btn btn-default" href="http://www.xueersi.com/kc/31061.html">立即报名</a>
  		</div>
  	</div>
  </div>
