--- a/source/data/courses/continuecourse.html
+++ b/source/data/courses/continuecourse.html
@@ -69,7 +69,7 @@
  			<p class="continue-course-detail">课程日期：<span class="continue-course-detail-date">2015-03-01至2015-8-31</span><span class="continue-course-detail-date">一轮上午班</span></p>
  		</div>
  		<div class="course-num">
- 				<a class="btn btn-default immediateSign" href="###">立即报名</a>
+ 				<button class="btn btn-default disableSign " disabled="">立即报名</button>
  		</div>
  	</div>
  </div>
