--- a/source/widget/Public.Module/teacher-bomb.html
+++ b/source/widget/Public.Module/teacher-bomb.html
@@ -13,6 +13,35 @@
     <!-- 这是当前模块样式文件 -->
     <link href="courses.css" rel="stylesheet"></head>
        <body>
+        <div class="teacher-bomb teacher-coach-bomb">
+            <div class="dialog-second">
+                <dl class="dialog-top">
+                    <dt><img src="img/default_photo.jpg"></dt>
+                    <dd>
+                        <a href="javascript:;">辅导老师</a><i class="course-icon gender-g"></i>
+                        <!-- <em class="course-icon icon-s-bverify" title="学而思网校机构认证">v</em> -->
+
+                    </dd>
+                </dl>
+                <div class="dialog-center dialog-second">
+                    <p>英语辅导老师，毕业于北京大学</p>
+                    <p>新产品上线信息，吐槽在线学习最新热点</p>
+                </div>
+            </div>
+
+            <div class="dialog-down-wrap">
+                <div class="dialog-border">
+                    <div class="dialog-down">
+                        <ul>
+                            <li>微信扫描二维码</li>
+                            <li><img src="http://x03.xesimg.com/teacher/2016/01/14/14527559421613.jpg" alt=""></li>
+                            <li>向老师咨询课程</li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </div>
+<!--        辅导老师头像页 卡-->
         <div class="teacher-bomb">
             <div class="dialog-second">
                 <dl class="dialog-top">
