--- a/source/widget/Mall.indexGrade/index.html
+++ b/source/widget/Mall.indexGrade/index.html
@@ -10,8 +10,10 @@
 	<!-- 这是CSS库文件 -->
 	<link href="../../lib/bootstrap/3.3.5-custom/css/bootstrap.min.css" rel="stylesheet">
 	<link rel="stylesheet" href="http://cdn.bootcss.com/font-awesome/4.4.0/css/font-awesome.min.css">
+
 	<!-- 这是当前模块样式文件 -->
-	<link href="ui-grade.css" rel="stylesheet"></head>
+	<link href="ui-grade.css" rel="stylesheet">
+	</head>
 <body>
 	<div class="ui-gradeCourse-item">
 		
