直播详情页

--- a/source/widget/Public.Module/teacher-bomb.html
+++ b/source/widget/Public.Module/teacher-bomb.html
@@ -22,7 +22,7 @@
                     </dd>
                     <dd class="app-text"> 微信扫码二维码<br/>
                        向老师咨询课程</dd>
-                    <dd class="app-code"> <img src="../Mall.courseInfo/img/app.png" alt=""></dd>
+                    <dd class="app-code"> <img src="../Mall.courseInfo/img/app-code.png" alt=""></dd>
                 </dl>
                 <div class="dialog-center dialog-second">
                     <p>英语辅导老师，毕业于北京大学</p>
