--- a/source/widget/Public.Module/teacher-bomb.html
+++ b/source/widget/Public.Module/teacher-bomb.html
@@ -20,9 +20,11 @@
                     <dd class="app-name">
                         <a href="javascript:;">刘洋洋洋老师</a><i class="course-icon gender-g"></i>
                     </dd>
+<!--
                     <dd class="app-text"> 微信扫码二维码<br/>
                        向老师咨询课程</dd>
-                    <dd class="app-code"> <img src="../Mall.courseInfo/img/app-code.png" alt=""></dd>
+-->
+                    <dd class="app-code"> <a href="#"><img src="img/qq-big-white.png" alt="qq"></a></dd>
                 </dl>
                 <div class="dialog-center dialog-second">
                     <p>英语辅导老师，毕业于北京大学</p>
