--- a/source/widget/Public.Module/teacher-bomb.html
+++ b/source/widget/Public.Module/teacher-bomb.html
@@ -20,10 +20,9 @@
                     <dd class="app-name">
                         <a href="javascript:;">刘洋洋洋老师</a><i class="course-icon gender-g"></i>
                     </dd>
-<!--
-                    <dd class="app-text"> 微信扫码二维码<br/>
-                       向老师咨询课程</dd>
--->
+                    <dd class="app-text">
+                        QQ群号：3456798656<a href="#" style="padding-left:5px;"><img src="../Public.Module/img/icon-qq-zx.png"/></a>
+                    </dd>
                     <dd class="app-code"> <a href="#"><img src="img/qq-big-white.png" alt="qq"></a></dd>
                 </dl>
                 <div class="dialog-center dialog-second">
