--- a/source/widget/UserHome.perfection/perfect-information2.html
+++ b/source/widget/UserHome.perfection/perfect-information2.html
@@ -10,11 +10,27 @@
 	<!-- 这是CSS库文件 -->
 	<link rel="stylesheet" type="text/css" href="../../lib/bootstrap/3.3.5-custom/css/bootstrap.min.css">
 	<!-- 这是当前模块样式文件 -->
-	<link href="perfect-information.css" rel="stylesheet"></head>
+	<link href="perfect-information.css" rel="stylesheet">
 	<!-- 这是jquery库文件 -->
 	<script type="text/javascript" src="../../lib/jQuery/2.1.1/jquery.min.js"></script>
 </head>
 <body  >
+<div id="welcome-live-tips-infor">
+	<div class="live-tips-itme">
+	    <div class="ui-avatars">
+            <img alt="" src="http://r03.xesimg.com/teacher/2014/02/28/13935689945281.jpg">
+            <span>海丰老师</span>
+        </div>
+         <div class="course-details">
+            <p class="course-title">
+                <a href="##">第一讲【飞遍化学】炸开你的化学世界大门(第三季)——大揭秘 </a>
+            </p>
+            <p class="course-time">2016-9-10(周六)13：00-14：00</p>
+            <p class="course-labal">炸开你的化学世界大门(第三季</p>
+        </div>
+	</div>
+	<div class="btn-goto-study"><a href="#">立即上课</a></div>
+</div>
 	<div id="welcome-infor" data-toggle="modal" data-target="#informationGuid">
 		<div class="information-guid">
 			<img src="img/information-setting.png">
