--- a/source/widget/UserHome.perfection/test.html
+++ b/source/widget/UserHome.perfection/test.html
@@ -10,7 +10,7 @@
 	<!-- 这是CSS库文件 -->
 	<link rel="stylesheet" type="text/css" href="../../lib/bootstrap/3.3.5-custom/css/bootstrap.min.css">
 	<!-- 这是当前模块样式文件 -->
-	<link href="perfect-information.css" rel="stylesheet"></head>
+	<link href="perfect-information.css" rel="stylesheet">
 	<!-- 这是jquery库文件 -->
 	<script type="text/javascript" src="../../lib/jQuery/2.1.1/jquery.min.js"></script>
 	<style type="text/css">
@@ -24,13 +24,28 @@
 	<script type="text/javascript">
 // 欢迎信息
 function loginGuid(){
-	var result = '<iframe src="http://www.xueersi.com/user/register/?123" width="500" height="576"></iframe>';
-	var titlecon = '<h4 class="modal-title">注册</h4>\
-					<span class="modal-title-span">我已注册，现在就去<a href="">登录</a></span>'
+	var html = '<div id="welcome-live-tips-infor">'
+                   +' <div class="live-tips-itme">'
+                    +'    <div class="ui-avatars">'
+                            +'<img alt="" src="http://r03.xesimg.com/teacher/2014/02/28/13935689945281.jpg">'
+                            +'<span>海丰老师</span>'
+                       +' </div>'
+                        +' <div class="course-details">'
+                           +' <p class="course-title">'
+                                +'<a href="##">第一讲【飞遍化学】炸开你的化学世界大门(第三季)——大揭秘 </a>'
+                           +' </p>'
+                            +'<p class="course-time">2016-9-10(周六)13：00-14：00</p>'
+                            +'<p class="course-labal">炸开你的化学世界大门(第三季</p>'
+                       +' </div>'
+                   +' </div>'
+                   +' <div class="btn-goto-study"><a href="#">立即上课</a></div>'
+                +'</div>';
+	//var titlecon = '<h4 class="modal-title">注册</h4>\
+					//<span class="modal-title-span">我已注册，现在就去<a href="">登录</a></span>'
 	createModal.show({
 		id : 'loginGuid',
-		title : titlecon,
-		cls : 'login-Modal',
+		title : '直播提醒',
+		cls : 'live-Modal-tips',
 		content : result
 	}); 
 	$('#loginGuid').modal('show');
